# dsc-tg-forwarder

./: Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: ci.yml  release.yml  test.yml
assets/: config.yml
src/: cli.rs  config.rs  handler.rs  lib.rs  main.rs  utils.rs
src/config/: mod.rs
src/utils/: mod.rs
