[package]
name = "dsc-tg-forwarder"
version = "0.1.0"
edition = "2021"
readme = "README.md"
authors = ["Alexiy Rybin <alexiy.rybin@gmail.com>"]
repository = "https://github.com/tapnisu/dsc-tg-forwarder/"
description = "Selfbot to send your incoming Discord messages to Telegram"
license = "MIT"

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
serde = { version = "1.0.162", features = ["derive"] }
serde_yaml = "0.9.21"
serenity = { git = "https://github.com/vars1ty/serenity", branch = "current", default_features = false, features = [
    "builder",
    "cache",
    "client",
    "gateway",
    "http",
    "model",
    "utils",
    "rustls_backend",
] }
teloxide = "0.12.2"
tokio = { version = "1.28.0", features = ["rt-multi-thread", "macros"] }
