[package]
name = "dsc-tg-forwarder"
version = "0.2.0"
edition = "2021"
readme = "README.md"
authors = ["Aleksei Rybin <0xalekseirybin@gmail.com>"]
repository = "https://github.com/tapnisu/dsc-tg-forwarder/"
description = "Selfbot to send your incoming Discord messages to Telegram"
license = "MIT"

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.5", features = ["derive"] }
home = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serenity = { git = "https://github.com/vars1ty/serenity", branch = "current", default_features = false, features = [
    "builder",
    "cache",
    "client",
    "gateway",
    "http",
    "model",
    "utils",
    "rustls_backend",
] }
teloxide = "0.12"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
