[package]
name = "dsc-tg-forwarder"
version = "0.2.0"
edition = "2021"
readme = "README.md"
authors = ["Aleksei Rybin <0xalekseirybin@gmail.com>"]
repository = "https://github.com/tapnisu/dsc-tg-forwarder/"
description = "Selfbot to send your incoming Discord messages to Telegram"
license = "MIT"

# Don't forget to update `.github/workflows/test.yml`
rust-version = "1.74"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
home = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_yaml_ng = "0.10"
serenity_self = "0.13"
teloxide = "0.12"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
